crates/toml/tests/snapshots/invalid/float/trailing-exp-minus.stderr
TOML parse error at line 1, column 27
  |
1 | trailing-exp-minus = 0.0e-
  |                           ^
invalid exponent, expected digits

---
TOML parse error at line 1, column 22
  |
1 | trailing-exp-minus = 0.0e-
  |                      ^^^^^
invalid float
